# dmenu_pick

./: README.md  example.cfg  pyproject.toml
src/dmenu_pick/: __init__.py  main.py
src/dmenu_pick.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/dmenu_picker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
